# corso-agenticai-2026

./: .gitignore  comando.sh
.opencode/skills/read-pdf/: SKILL.md
00-aitools/: aider_env_file.env  config.yaml  opencode.json
01-n8n/: frp.toml  runn8n.sh
02-customcode/: main.py  mcpserver_quickstart.py  pyproject.toml
03-rag/: pyproject.toml  requirements.txt
03-rag/rag_series/: 1_data_ingestion.py  1b_data_ingestion_docling.py  2_retrieval.py  3_generation.py  explore_chunk_structure.py
04-agenti/: main.py  pyproject.toml
